--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
     "react-redux": "^6.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "jest": "^23.6.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-test-renderer": "^16.6.3",
+    "redux": "^4.0.1",
+    "reselect": "^4.0.0",
     "rollup": "^0.67.0",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.0.0"
@@ -17,7 +27,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "test": "node test/test.js",
+    "t": "jest",
     "pretest": "npm run build"
   },
   "files": [
