--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easy-redux-helpers",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "dist/easy-redux-helpers.cjs.js",
   "module": "dist/easy-redux-helpers.esm.js",
   "browser": "dist/easy-redux-helpers.umd.js",
@@ -28,7 +28,8 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "t": "jest",
-    "pretest": "npm run build"
+    "pretest": "npm run build",
+    "publish": "yarn build && npm publish"
   },
   "files": [
     "dist"
