--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "module": "dist/easy-redux-helpers.esm.js",
   "browser": "dist/easy-redux-helpers.umd.js",
   "dependencies": {
-    "immer": "^1.8.0",
+    "immer": "^1.8.0"
+  },
+  "peerDependencies": {
     "react-redux": "^6.0.0"
   },
   "devDependencies": {
@@ -18,6 +20,7 @@
     "np": "^3.0.4",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
     "react-test-renderer": "^16.6.3",
     "redux": "^4.0.1",
     "reselect": "^4.0.0",
